# boss-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.json.example  docker-compose.yml  dotenv.example  fly.toml  index.js  package-lock.json  package.json  workflow_api.json
src/: main.rs  recources.rs  resources.rs  systems.rs  utils.rs
src/systems/: general.rs  loop_songs.rs  manage_queue.rs  mod.rs  play_youtube.rs  systems.rs  tracker.rs
tests/: raw_pcm_input.rs
