[package]
name = "boss-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.11.6"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
ollama-rs = "0.1.6"
openai-rust = "1.5.2"
songbird = "0.3.2"
regex = "1.9.5"
lazy_static = "1.4.0"
serde_json = "1.0.108"
reqwest = "0.11.22"
rand = "0.8.5"

[profile.release]
opt-level = 3
lto = true