[package]
name = "boss-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12.5"
tokio = { version = "1.52.3", features = ["full"] }
dotenv = "0.15.0"
openai-rust = "1.5.2"
songbird = "0.6.0"
songbird_reqwest = { package = "reqwest", version = "0.12.28", default-features = false, features = ["rustls-tls", "stream"] }
regex = "1.13.0"
lazy_static = "1.5.0"
serde_json = "1.0.150"
reqwest = { version = "0.13.4", features = ["json"] }

[profile.release]
opt-level = 3
lto = true