[package]
name = "boss-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12.5"
tokio = { version = "1.52.3", features = ["full"] }
dotenv = "0.15.0"
openai-rust = "1.5.2"
songbird = "0.6.0"
symphonia = { version = "0.5.5", default-features = false, features = ["pcm"] }
symphonia-core = "0.5.5"
regex = "1.13.0"
lazy_static = "1.5.0"
serde_json = "1.0.150"
base64 = "0.22.1"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "native-tls", "http2", "charset", "system-proxy"] }

[profile.release]
opt-level = 3
lto = true